--- a/httpd.yaml
+++ b/httpd.yaml
@@ -17,6 +17,9 @@ spec:
         image: httpd
         ports:
         - containerPort: 80
+        envFrom:
+          - configMapRef:
+              name: httpd-cm
 ---
 apiVersion: v1
 kind: Service
@@ -30,3 +33,14 @@ spec:
   - port: 9201
     targetPort: 80
     nodePort: 31000
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: httpd-cm
+data:
+  dbname: mysql
+  log_level: debug
+  custom_data:
+    image.public.key=1234
+    rs.public.key=aspe
